--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
 
     <div id="list"><p></div>
 
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
