--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="style.css">
 
+
+    <meta property="og:title" content="To Do"/>
+    <meta property="og:url" content="https://virnatwo.github.io/To-Do/"/>
+  
+    <meta name="theme-color" content="#6d00b6"/>
+
     <title>El List</title>
   </head>
 
