--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 
     <meta property="og:title" content="To Do"/>
+	  <meta property="og:image" content="https://virnatwo.github.io/To-Do/image.jpg"/>
     <meta property="og:url" content="https://virnatwo.github.io/To-Do/"/>
   
     <meta name="theme-color" content="#6d00b6"/>
