--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <label for="fileUploadImport" class="btn">Import</label>
         <button class="btn" onclick="Export()">Export</button>
       </div><p>
+      <div class="unselectable">
+        <button class="btn" onclick="RemoveAll()">Remove All</button>
+      </div>
     </div>
 
     <input type="text" id="addvalue" class="btn" name="addtolist" autocomplete="true" autofocus="true" placeholder="Text">
