--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="windowDrag">
       <div class="windowDragHeader btn"></div>
-      <button class="btn del unselectable" onclick="ToggleSetting()">X</button><br>
+      <button class="btn del unselectable" onclick="ToggleSetting()">X</button><br><br>
       <div class="unselectable">
         <input type="file" accept="application/json" name="fileUploadImport" id="fileUploadImport" class="fileUpload" style="display: none;"/>
         <label for="fileUploadImport" class="btn">Import</label>
